2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: otus
  labels:
    app: demo
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - image: irmdevdocker/sandbox:0.0.2
          name: demo-container
          ports:
            - name: web
              containerPort: 8080
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 10
