1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: otus
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: "web"
  selector:
    app: demo
