3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        rewrite ^/health/?$ /health break;
        rewrite ^/otusapp/([A-Za-z]+)/.* / break;
        return 500;
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: demo-service
                port:
                  number: 8000
            pathType: Prefix
            path: /
